--- a/lib/AIL_IO/AIL_IO.props
+++ b/lib/AIL_IO/AIL_IO.props
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<ImportGroup Label="PropertySheets" />
-	<Import Project="$(IPL)\lib\AIL\AIL.props" Condition=" '$(AIL_PROPS)' == '' " /
+	<Import Project="$(IPL)\lib\AIL\AIL.props" Condition=" '$(AIL_PROPS)' == '' " />
+	<Import Project="$(IPL)\lib\AIL_png\AIL_png.props" Condition=" '$(AIL_PNG_PROPS)' == '' " />
+	<Import Project="$(IPL)\lib\AIL_Qt\AIL_Qt.props" Condition=" '$(AIL_QT_PROPS)' == '' " />
+	<PropertyGroup Label="UserMacros">
+		<AIL_IO_PROPS>true</AIL_IO_PROPS>
+	</PropertyGroup>
+	<ItemDefinitionGroup>
+		<ClCompile>
+			<AdditionalIncludeDirectories>$(IPL)/lib/AIL_IO/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+		</ClCompile>
+	</ItemDefinitionGroup>
+	<ItemGroup />
+</Project>
