--- a/lib/AML/AML.vcxproj.filters
+++ b/lib/AML/AML.vcxproj.filters
@@ -8,4 +8,24 @@
     <ClInclude Include="src\Media\PlayerControl.h">
       <Filter>Media\Header Files</Filter>
     </ClInclude>
-    <ClInclud
+    <ClInclude Include="src\Media\PlayerControlPacket.h">
+      <Filter>Media\Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Media">
+      <UniqueIdentifier>{84c56ee8-e5ad-4afb-8641-90746aac165a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Media\Header Files">
+      <UniqueIdentifier>{2086bfe0-059a-4ec3-bef8-f7f1a44b7935}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Media\Source Files">
+      <UniqueIdentifier>{129e966c-b279-4358-85d8-8a26e7a2f6f6}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Media\PlayerCommand.cpp">
+      <Filter>Media\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Media\PlayerControl.cpp">
+      <Filter>Media\Source Files</Filt
