--- a/lib/AML_ffmpeg/AML_ffmpeg.vcxproj
+++ b/lib/AML_ffmpeg/AML_ffmpeg.vcxproj
@@ -46,4 +46,21 @@
       <Project>{4283e1f3-23a1-409f-96ce-9c8984740455}</Project>
     </ProjectReference>
     <ProjectReference Include="..\AIL\AIL.vcxproj">
-      <Project>{a09d1519-dc15-45cb-9972-958996280cc
+      <Project>{a09d1519-dc15-45cb-9972-958996280ccf}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\AML\AML.vcxproj">
+      <Project>{8f538276-06ad-498e-b1f3-d789ba7e9300}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\AVL\AVL.vcxproj">
+      <Project>{830c7521-7800-4877-ac29-686d38dea25a}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Media\FFMPEGmediaPlayerAgent.cpp" />
+  </ItemGroup>
+  <PropertyGroup Label="Globals">
+    <ProjectGuid>{98E5DFFD-DD87-4059-A6DC-67605A87D2D9}</ProjectGuid>
+    <Keyword>Win32Proj</Keyword>
+    <RootNamespace>AMLffmpeg</RootNamespace>
+    <ProjectName>AML_ffmpeg</ProjectName>
+    <VCTargetsPath Condition="'$(VCTargetsPath11)' != '' and '$(VSVersion)' == '' and $(VisualStudioVersion) == ''">$(VC
